--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   package_info_plus: ^1.0.6
   path: ^1.8.0
   path_provider: ^2.0.2
-  provider: ^6.0.0
+  provider: 4.3.2+3
 
 flutter:
   uses-material-design: true
