--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,5 +13,5 @@ dependencies:
 
   extended_image: ^4.1.0
   photo_manager: ^1.3.2
-  provider: ^6.0.0
+  provider: 4.3.2+3
   video_player: ^2.1.14
